--- a/.github/ISSUE_TEMPLATE/功能请求.md
+++ b/.github/ISSUE_TEMPLATE/功能请求.md
@@ -10,10 +10,12 @@ assignees: SanQianQVQ
 **您的功能需求是否与某个问题有关？请描述一下。**
 请清晰而简明地描述问题。
 
-**描述您希望的解决方案**
+**涉及模组：**
+
+**描述您希望的解决方案：**
 请清晰而简明地描述您希望发生的事情。
 
-**描述您考虑过的替代方案** 
+**描述您考虑过的替代方案：** 
 请清晰而简明地描述您考虑过的任何替代解决方案或功能。
 
 **补充内容：**
